--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <title>Frontend Mentor | Order summary card</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <!-- Feel free to vwove these styles or customise in your own stylesheet 👍 -->
   <style>
     @import url("https://fonts.google.com/specimen/Red+Hat+Display");
 
@@ -23,22 +23,22 @@
 
     h1 {
       font-weight: 700;
-      font-size: 1.5rem;
+      font-size: 1.5vw;
     }
 
     p {
       font-weight: 300;
       color: gray;
-      font-size: 0.8rem;
+      font-size: 0.8vw;
     }
 
     body {
       background: url("images/pattern-background-desktop.svg");
-      background-position: center;
+      background-position:top;
       background-repeat: no-repeat;
       background-size: cover;
       background-color: hsl(225, 100%, 94%);
-      min-height: 100vh;
+      min-height: 80vh;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -47,13 +47,15 @@
     }
 
     .container {
+      margin-top: 6vh;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       width: 30%;
-      border: 2px solid black;
       background-color: #ffff;
+      border-radius: 15px;
+      box-shadow:  0 10px 20px 1px rgba(0, 0, 0, 0.178);
     }
 
     .hero {
@@ -65,8 +67,8 @@
       border-radius: 10px 10px 0 0;
       /* height: 10%; */
       /* percent will not work incase of height as the parent container is not having any height */
-      max-height: 200px;
-      min-height: 200px;
+      max-height: 10vw;
+      min-height: 10vw;
     }
 
     section {
@@ -74,36 +76,39 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      margin: 2rem 1rem 1rem 1rem;
+      margin: 2vw 1vw 1vw 1vw;
       
     }
 
     section p {
       width: 50%;
       text-align: center;
-      margin: 1rem;
-      line-height: 1.1rem;
+      margin: 1vw;
+      line-height: 1.1vw;
     }
 
     .plan-sec {
-      margin-top: 0.5rem;
+      margin-top: 0.5vw;
       display: flex;
-      padding: 1rem;
+      padding: 1vw;
       background-color: hsl(225, 100%, 98%);
       justify-content: space-between;
-      width: 80%;
+      width: 20vw;
       align-items: center;
       border-radius: 15px;
     }
 
     .plan-sec * {
-      font-size: 0.8rem;
+      font-size: 0.8vw;
     }
 
     .leftside-text {
       display: flex;
     }
-
+    .leftside-text img{
+      max-width: 6vw;
+      max-height: 6vw;
+    }
     .text {
       display: flex;
       flex-direction: column;
@@ -114,12 +119,33 @@
       line-height: 0;
     }
     .btn{
-      margin: 2rem;
+      margin: 2vw;
       display: flex;
       flex-direction: column;
+      align-items: center;
+      justify-content: center;
     }
     .btn *{
-      margin: 0.5rem;
+      margin: 0.5vw;
+      width: 25vw;
+      font-size: 1vw;
+    }
+    .btn-primary{
+      background-color:hsl(245, 75%, 52%);
+      color: whitesmoke;
+      padding: 1vw 1vw;
+      font-family: 'Red Hat Display', sans-serif;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      box-shadow:  0 8px 20px 1px hsla(245, 75%, 52%, 0.397);
+    }
+    .btn a{
+      display: block;
+      width: auto;
+      text-decoration: none;
+      color: hsl(224, 23%, 55%);
+      font-weight: 500;
     }
   </style>
 </head>
