--- a/index.html
+++ b/index.html
@@ -144,8 +144,21 @@
       display: block;
       width: auto;
       text-decoration: none;
-      color: hsl(224, 23%, 55%);
-      font-weight: 500;
+      color: hsl(225, 46%, 61%);
+      font-weight: 700;
+    }
+    .btn a:hover{
+      color:hsl(228, 8%, 26%)
+    }
+    .btn-primary:hover{
+      background-color:hsl(224, 47%, 57%);
+    }
+    .plan-sec a{
+      font-weight: 700;
+    }
+    .plan-sec a:hover{
+      text-decoration: none;
+      color:hsl(224, 47%, 57%)
     }
   </style>
 </head>
